change the name from Nigeria to Tanzania

--- a/wishlist.html
+++ b/wishlist.html
@@ -18,12 +18,12 @@
                 <div class="search-box">
                     <input type="text" placeholder="Search for anything..." id="main-search">
                     <select id="location-select">
-                        <option value="all">All Nigeria</option>
-                        <option value="lagos">Lagos</option>
-                        <option value="abuja">Abuja</option>
-                        <option value="kano">Kano</option>
-                        <option value="ibadan">Ibadan</option>
-                        <option value="benin">Benin City</option>
+                        <option value="all">All Tanzania</option>
+                        <option value="lagos">Dar-es-Salaam</option>
+                        <option value="abuja">Dodoma</option>
+                        <option value="kano">Arusha</option>
+                        <option value="ibadan">Mwanza</option>
+                        <option value="benin">Tanga</option>
                     </select>
                     <button class="search-btn">
                         <i class="fas fa-search"></i>
