--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="nav-dropdown-menu">
-                        <a href="profile.html">My Profile</a>
+                        <a href="profile.html">My Profile and account</a>
                         <a href="login.html">Login</a>
                         <a href="register.html">Register</a>
                         <a href="#" onclick="logout()">Logout</a>
                     </div>
+                
                 </div>
             </div>
             <div class="nav-mobile-toggle">
