I have changed the title

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
+        <div class="nav-container"> 
             <div class="nav-brand">
-                <a href="index.html" class="logo">JijiClone</a>
+                <a href="index.html" class="logo">JijiApp | Make your life better</a>
             </div>
             <div class="nav-search">
                 <div class="search-box">
